Continue writing function that check for missing candles in database
Added check_missing function to db_interact.py
It returns intervals with missing candles using an SQL request

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
 .idea/*
-__pycache__/db_interact.cpython-39.pyc
-__pycache__/exceptions.cpython-39.pyc
-__pycache__/get_hist_data.cpython-39.pyc
+__pycache__/*
